#673 - File types INI configuration is no longer valid without double-quotes <http://earthli.com/projects/view_change.php?id=1964>
Abandoned entries should not have their modification date changed
<http://earthli.com/projects/view_job.php?id=1935>

Fixed warning in database (introduced by recent bug fix for cloning)

--- a/lib/main/webcore/config/file_types.ini
+++ b/lib/main/webcore/config/file_types.ini
@@ -1,35 +1,35 @@
-[general]
-default={icons}/file_types/file
+[general]	
+default="{icons}/file_types/file"
 
 [mime_types]
-image/jpeg={icons}/file_types/image_file
-image/gif={icons}/file_types/image_file
-image/png={icons}/file_types/image_file
-text/plain={icons}/file_types/text_file
-application/msword={icons}/file_types/text_file
-text/html={icons}/file_types/text_file
-application/pdf={icons}/file_types/pdf_file
-video/quicktime={icons}/file_types/movie_file
-video/mpeg={icons}/file_types/movie_file
-video/x-msvideo={icons}/file_types/movie_file
-application/x-gzip={icons}/file_types/zip_file
-application/x-zip-compressed={icons}/file_types/zip_file
+image/jpeg="{icons}/file_types/image_file"
+image/gif="{icons}/file_types/image_file"
+image/png="{icons}/file_types/image_file"
+text/plain="{icons}/file_types/text_file"
+application/msword="{icons}/file_types/text_file"
+text/html="{icons}/file_types/text_file"
+application/pdf="{icons}/file_types/pdf_file"
+video/quicktime="{icons}/file_types/movie_file"
+video/mpeg="{icons}/file_types/movie_file"
+video/x-msvideo="{icons}/file_types/movie_file"
+application/x-gzip="{icons}/file_types/zip_file"
+application/x-zip-compressed="{icons}/file_types/zip_file"
 
 [extensions]
-jpg={icons}/file_types/image_file
-gif={icons}/file_types/image_file
-png={icons}/file_types/image_file
-zip={icons}/file_types/zip_file
-gz={icons}/file_types/zip_file
-tar={icons}/file_types/zip_file
-doc={icons}/file_types/text_file
-html={icons}/file_types/text_file
-htm={icons}/file_types/text_file
-txt={icons}/file_types/text_file
-php={icons}/file_types/text_file
-pdf={icons}/file_types/pdf_file
-mov={icons}/file_types/movie_file
-mpg={icons}/file_types/movie_file
-avi={icons}/file_types/movie_file
-swf={icons}/file_types/movie_file
-wmv={icons}/file_types/movie_file
+jpg="{icons}/file_types/image_file"
+gif="{icons}/file_types/image_file"
+png="{icons}/file_types/image_file"
+zip="{icons}/file_types/zip_file"
+gz="{icons}/file_types/zip_file"
+tar="{icons}/file_types/zip_file"
+doc="{icons}/file_types/text_file"
+html="{icons}/file_types/text_file"
+htm="{icons}/file_types/text_file"
+txt="{icons}/file_types/text_file"
+php="{icons}/file_types/text_file"
+pdf="{icons}/file_types/pdf_file"
+mov="{icons}/file_types/movie_file"
+mpg="{icons}/file_types/movie_file"
+avi="{icons}/file_types/movie_file"
+swf="{icons}/file_types/movie_file"
+wmv="{icons}/file_types/movie_file"
